This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/16/24: Added option to disable trimming of dark borders to the Navigator
Align Setup dialog, duplicating one entry in the specialized option for this.

4/16/24: SEM_4-1-9
4/16/24: Added routine to realign to a reloaded grid and transform Navigator
items to a new registration.

4/16/24: Fixed extensions added when SaveLog command is used with no
extension on the name.

4/16/24: Added support for frame handling from AMT cameras.

4/13/24: Fixed function to get advanced scripting version in FEI server.

4/12/24: SEM_4-2-0beta5
4/12/24: Added mechanism for a plugin to set up a script to run once when
program is idle.

4/12/24: Made montage fitting to an area try Search as well as View in Low
Dose when there are too many pieces; made full montage use current area in Low
Dose mode if it is View or Search and has a much larger pixel size.

4/12/24: Fixed early return, which became immediate on 3/19 (beta4).

4/12/24: Set default for MaxStackWindowSizeXY to 1024 if total memory limit
is above 5 GB (In 4.1).

3/28/24: Fixed AutocorrPeakVectors to stop script properly after an error
(In 4.1).

3/28/24: Fixed some needless scope changes when setting or leaving Low Dose
mode with states set and fixed image shift being left after changing between
View or Search states with different shift offsets (In 4.1).

3/28/24: Fixed position of X and Y values in Stage Move tool (In 4.1).

3/28/24: Fixed asking to save unchanged/empty Navigator when there is an
autosave file in short-term calibrations that no longer exists (In 4.1).

3/25/24: Fixed bad image shift being set when mag is change externally on a
JEOL after a low dose V -> R change that changes alpha (In 4.1).
